--- a/contacts-frontend/Dockerfile
+++ b/contacts-frontend/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:alpine as builder
 WORKDIR '/app'
 COPY ./package.json ./
-RUN npm install
+RUN npm install -g npm@7.10.0
 COPY . .
 RUN npm run build
 
