modified docker file

--- a/contacts-frontend/Dockerfile
+++ b/contacts-frontend/Dockerfile
@@ -1,7 +1,10 @@
 FROM node:alpine as builder
 WORKDIR '/app'
 COPY ./package.json ./
-RUN npm install -g npm@7.10.0
+RUN apt-get update && apt-get install -y curl
+RUN curl -sL https://deb.nodesource.com/setup_8.x | bash -
+RUN apt-get update && apt-get install -y nodejs
+RUN npm install
 COPY . .
 RUN npm run build
 
