--- a/contacts-frontend/Dockerfile
+++ b/contacts-frontend/Dockerfile
@@ -1,9 +1,9 @@
 FROM node:alpine as builder
 WORKDIR '/app'
 COPY ./package.json ./
-RUN apt-get update && apt-get install -y curl
+RUN apk update && apk install -y curl
 RUN curl -sL https://deb.nodesource.com/setup_8.x | bash -
-RUN apt-get update && apt-get install -y nodejs
+RUN apk update && apk install -y nodejs
 RUN npm install
 COPY . .
 RUN npm run build
