modified apt-get command in docker file

--- a/contacts-frontend/Dockerfile
+++ b/contacts-frontend/Dockerfile
@@ -2,6 +2,7 @@ FROM node:alpine as builder
 WORKDIR '/app'
 COPY ./package.json ./
 RUN apk add --update nodejs npm
+RUN apk add --update npm
 RUN npm install
 COPY . .
 RUN npm run build
