modified apt-get command in docker file

--- a/contacts-frontend/Dockerfile
+++ b/contacts-frontend/Dockerfile
@@ -1,16 +1,11 @@
 FROM node:alpine as builder
 WORKDIR '/app'
-ENV PATH /app/node_modules/.bin:$PATH
-
 COPY ./package.json ./
-RUN ls -l
-RUN pwd
 RUN apk add --update nodejs npm
 RUN apk add --update npm
 RUN npm install
-RUN npm install -g @angular/cli@8.3.18
 COPY . .
-RUN ls -l
+RUN ls -alrt
 RUN pwd
 RUN npm run build
 
