--- a/contacts-frontend/Dockerfile
+++ b/contacts-frontend/Dockerfile
@@ -3,8 +3,8 @@ WORKDIR '/app'
 COPY ./package.json ./
 RUN apk add --update nodejs npm
 RUN apk add --update npm
-RUN npm install -g npm@7.10.0
-ENV PATH="./node_modules/.bin:$PATH"
+RUN npm install 
+RUN npm install -g @angular/cli@8.3.18
 COPY . .
 RUN echo "################"
 RUN pwd
