Re-instated docker

--- a/contacts-frontend/Dockerfile
+++ b/contacts-frontend/Dockerfile
@@ -1,7 +1,9 @@
 FROM node:alpine as builder
 WORKDIR '/app'
 COPY ./package.json ./
-RUN npm install -g @angular/cli
+RUN npm install
+COPY . .
+RUN npm run build
 
 FROM nginx
 EXPOSE 4200
