--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -11,6 +11,6 @@ spec:
     spec:
       containers:
         - name: contacts 
-          image: contactsacr.azurecr.io/contacts
+          image: pkvcontainerregistry.azurecr.io/contacts
           ports:
           - containerPort: 80
