--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -84,6 +84,7 @@ steps:
   displayName: Deploy to Kubernetes cluster
   inputs:
     action: deploy
+    kubernetesServiceConnection: 'contactsServiceConnection'
     manifests: |
       $(Pipeline.Workspace)/manifests/deployment.yml
       $(Pipeline.Workspace)/manifests/service.yml
