--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -4,6 +4,9 @@ metadata:
   name: contacts 
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: contacts
   template:
     metadata:
       labels:
