--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -84,6 +84,7 @@ steps:
   displayName: Deploy to Kubernetes cluster
   inputs:
     action: deploy
+    namespace: 'kube-system'
     kubernetesServiceConnection: 'contactsServiceConnection'
     manifests: |
       ./manifests/deployment.yml
