--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,7 @@ steps:
 
 - task: Docker@2
   inputs:
-    containerRegistry: 'pkvcontainerregistry.azurecr.io'
+    containerRegistry: 'Docker-pvedanabhatla'
     repository: 'pvedanabhatla/contacts-backend'
     command: 'buildAndPush'
     Dockerfile: './contacts-backend/Dockerfile'
@@ -40,7 +40,7 @@ steps:
       $(Build.BuildId)
 - task: Docker@2
   inputs:
-    containerRegistry: 'pkvcontainerregistry.azurecr.io'
+    containerRegistry: 'Docker-pvedanabhatla'
     repository: 'pvedanabhatla/contacts-frontend'
     command: 'buildAndPush'
     Dockerfile: './contacts-frontend/Dockerfile'
