--- a/contacts-deployment/k8s/contact-backend-deployment.yaml
+++ b/contacts-deployment/k8s/contact-backend-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
         containers:
           - name: contacts-api
-            image: pvedanabhatla/contacts-backend
+            image: contacts-backend
             ports:
               - containerPort: 8080
             env: 
