--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,7 +31,7 @@ steps:
 - task: Docker@2
   inputs:
     containerRegistry: 'Docker-pvedanabhatla'
-    repository: 'contacts-backend'
+    repository: 'contacts'
     command: 'buildAndPush'
     Dockerfile: './contacts-backend/Dockerfile'
     buildContext: './contacts-backend'
@@ -41,7 +41,7 @@ steps:
 - task: Docker@2
   inputs:
     containerRegistry: 'Docker-pvedanabhatla'
-    repository: 'contacts-frontend'
+    repository: 'contacts'
     command: 'buildAndPush'
     Dockerfile: './contacts-frontend/Dockerfile'
     buildContext: './contacts-frontend'
@@ -86,5 +86,4 @@ steps:
       ./manifests/deployment.yml
       ./manifests/service.yml
     containers: |
-        pkvcontainerregistry.azurecr.io/contacts-backend:$(Build.BuildId)
-        pkvcontainerregistry.azurecr.io/contacts-frontend:$(Build.BuildId)
+        pkvcontainerregistry.azurecr.io/contacts:$(Build.BuildId)
